[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grepcord"
version = "0.9.0"
description = "Greptile API CLI & Discord Integration"
authors = [{ name = "Mei Zhang", email = "meizhang.dev@gmail.com" }]
dependencies = [
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    "InquirerPy==0.3.4",
    "aiohttp==3.10.5"
]